saved articles still not showing

--- a/public/assets/CSS/style.css
+++ b/public/assets/CSS/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   margin-bottom: 80px;
-  background-image: url("../images/newspaper.png");
+  background-image: url("../images/newspaper.jpg");
 }
 
 .footer {
